--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Social Media Marketing</title>
+    <!-- added a more descriptive title-->
 </head>
 
 <body>
@@ -13,7 +14,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a role="nav button serach-engine" href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -27,7 +28,7 @@
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" a="notebook with plans" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
