--- a/Develop/index.html
+++ b/Develop/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4><!--Changed this to H4 to increase accessibility online for challenged readers-->
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
