moved img to HTML, added classes for Div for flex properties and img for properties

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,6 +25,13 @@
             </ul>
         </div>
     </div>
+
+        <div class="maindiv">
+        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="A picture of the Horiseon Social Media Team working on a project." class="mainimage" />
+        <!-- added alt tag describing the main image for readers-->
+        <!--added a class for the Div parent element to make it flex, and the a class for the image to size it appropriately-->
+    </div>
+
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
