consolidated css and left some notes, readme file adjusted

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,8 @@
 
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!--added id for search engine optimization to enable the link-->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" a="notebook with plans" />
             <h2>Search Engine Optimization</h2>
             <p>
