--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,7 +27,7 @@
     </div>
 
         <div class="maindiv">
-        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="A picture of the Horiseon Social Media Team working on a project." class="mainimage" />
+        <img src="./assets/images/digital-marketing-meeting.jpg"  alt="A horiseon team working on a socail media marketing project" class="mainimage" />
         <!-- added alt tag describing the main image for readers-->
         <!--added a class for the Div parent element to make it flex, and the a class for the image to size it appropriately-->
     </div>
